# agentnode

./: .gitignore  ANP-v0.2-Engineering-Spec.md  AUDIT-BACKLOG.md  CHANGELOG.md  LICENSE  LICENSE-BSL  LICENSE-MIT  README.md  RELEASING.md  blog-v040.html  deploy.sh  docker-compose.yml  test4-edit-screen-snapshot.md  traefik-agentnode.yaml  update_articles_monetization_disclaimer.sql  update_articles_runtime.py  update_articles_runtime.sql
adapter-crewai/: README.md  pyproject.toml
adapter-crewai/agentnode_crewai/: __init__.py  tools.py
adapter-crewai/tests/: test_tools.py
adapter-langchain/: README.md  pyproject.toml
adapter-langchain/agentnode_langchain/: __init__.py  loader.py
adapter-langchain/tests/: test_tools.py
adapter-mcp/: README.md  pyproject.toml
adapter-mcp/agentnode_mcp/: __init__.py  platform_server.py  server.py
backend/: .env.example  Dockerfile.verifier  Dockerfile.verifier-browser  SECURITY_CHANGELOG.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_users_apikeys_publishers.py  002_packages_and_related_tables.py  003_add_is_admin_to_users.py  004_webhooks.py  005_add_signing_public_key.py  006_add_capability_entrypoint.py  007_add_user_ban_fields.py  008_add_verification.py  (+25 more)
backend/app/: config.py  database.py  main.py
backend/data/: compatibility_matrix.json
backend/docker/: Dockerfile.verifier
backend/scripts/: _build_extra_usecase.py  backfill_enrichment.py  backfill_scores.py  backfill_smoke_reason.py  batch_verify.py  check_schemas.py  clear_quarantine.py  compare_smoke.py  create_local_bucket.py  extra_security_eco.json  extra_tools.json  extra_tools_b.json  extra_usecase_a.json  extra_usecase_b.json  fix_packages_v2.py  fix_schemas_db.py  fix_sdk_consistency.py  fix_sdk_imports_in_articles.py  fix_taxonomy_descriptions.py  fix_taxonomy_overlaps.py  fix_tests.py  fix_word_counter.py  init_meilisearch.py  migrate_prio2.sql  publish_all_starter_packs.py  publish_starter_packs.py  rebuild_and_reverify.py  reindex_search.py  reject_version.py  reverify_all.py  reverify_one.py  reverify_phase2a.py  reverify_problem16.py  reverify_regressions.py  reverify_two.py  seed_blog_cluster1.py  seed_blog_extra.py  seed_blog_wave1.py  seed_blog_wave234.py  seed_capability_taxonomy.py  (+21 more)
backend/tests/: conftest.py  test_admin.py  test_assembler_connector.py  test_assembler_prompts.py  test_assembler_resources.py  test_auth.py  test_billing.py  test_capability_gaming.py  test_cases_adapter.py  test_cross_publisher_auth.py  test_download_install_separation.py  test_e2e_flow.py  test_health.py  test_import_convert.py  test_install.py  test_install_resolution.py  test_jwt_security.py  test_media_library.py  test_oauth.py  test_p0_security.py  test_packages.py  test_publish_v02.py  test_publishers.py  test_rate_limit.py  test_resolution.py  test_scoring.py  test_search.py  test_security.py  test_shared_validators.py  test_signatures.py  test_sprint_a_auth.py  test_sprint_a_trust.py  test_sprint_i_negative.py  test_typosquatting.py  test_validator.py  test_validator_v02.py  test_validator_v03_taxonomy.py  test_vault.py  test_verification.py  test_verification_pipeline.py  (+2 more)
sdk/: .env.example  CHANGELOG.md  README.md  pyproject.toml
sdk/agentnode_sdk/: __init__.py  async_client.py  client.py  compatibility.py  config.py  credential_handle.py  credential_resolver.py  credential_store.py  detect.py  exceptions.py  installer.py  models.py  policy.py  resource_provider.py  run_log.py  runner.py  runtime.py
sdk/scripts/: analyze_scores.py  batch_verify.py  ci_smoke_test.py  generate_compatibility_artifacts.py  verify_toolcalls.py  weekly_retest.sh
sdk/tests/: conftest.py  test_agent_runner.py  test_async_client.py  test_auto_upgrade_policy.py  test_cli.py  test_client.py  test_client_sprint_b.py  test_config.py  test_credential_handle.py  test_credential_integration.py  test_credential_resolver.py  test_credential_store.py  test_detect.py  test_detect_and_install.py  test_e2e_runtime.py  test_edge_cases.py  test_installer_sprint_b.py  test_llm_binding.py  test_llm_call_runlog.py  test_policy.py  test_policy_integration.py  test_prompt_specs.py  test_provider_matrix.py  test_remote_runner.py  test_resource_provider.py  test_resource_specs.py  test_run_log.py  test_runner.py  test_runtime.py  test_smart.py  test_v02.py
starter-packs/academic-research-agent/: agentnode.yaml  pyproject.toml
starter-packs/ai-image-generator-pack/: agentnode.yaml  pyproject.toml
starter-packs/api-connector-pack/: agentnode.yaml  pyproject.toml
starter-packs/api-design-agent/: agentnode.yaml  pyproject.toml
starter-packs/api-docs-generator-pack/: agentnode.yaml  pyproject.toml
starter-packs/arxiv-search-pack/: agentnode.yaml  pyproject.toml
starter-packs/audio-processor-pack/: agentnode.yaml  pyproject.toml
starter-packs/aws-toolkit-pack/: agentnode.yaml  pyproject.toml
starter-packs/azure-toolkit-pack/: agentnode.yaml  pyproject.toml
starter-packs/blog-writer-agent/: agentnode.yaml  pyproject.toml
starter-packs/browser-automation-pack/: agentnode.yaml  pyproject.toml
starter-packs/calendar-manager-pack/: agentnode.yaml  pyproject.toml
starter-packs/ci-cd-agent/: agentnode.yaml  pyproject.toml
starter-packs/ci-cd-runner-pack/: agentnode.yaml  pyproject.toml
starter-packs/citation-manager-pack/: agentnode.yaml  pyproject.toml
starter-packs/cloud-cost-agent/: agentnode.yaml  pyproject.toml
starter-packs/cloud-deploy-pack/: agentnode.yaml  pyproject.toml
starter-packs/code-executor-pack/: agentnode.yaml  pyproject.toml
starter-packs/code-linter-pack/: agentnode.yaml  pyproject.toml
starter-packs/code-refactor-pack/: agentnode.yaml  pyproject.toml
starter-packs/code-review-agent/: agentnode.yaml  pyproject.toml
starter-packs/competitive-intel-agent/: agentnode.yaml  pyproject.toml
starter-packs/contract-review-agent/: agentnode.yaml  pyproject.toml
starter-packs/contract-review-pack/: agentnode.yaml  pyproject.toml
starter-packs/copywriting-pack/: agentnode.yaml  pyproject.toml
(+887 files in other folders)
