[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentnode-langchain"
version = "0.1.0"
description = "LangChain adapter for AgentNode — use AgentNode packages as LangChain tools."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["ai", "agent", "langchain", "agentnode", "tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "agentnode-sdk>=0.1.0",
    "langchain-core>=0.3",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://agentnode.net"
Repository = "https://github.com/agentnode-ai/agentnode"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.hatch.build.targets.wheel]
packages = ["agentnode_langchain"]
