[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentnode-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "redis>=5.0",
    "httpx>=0.27",
    "bcrypt>=4.0",
    "PyJWT>=2.8",
    "pyotp>=2.9",
    "boto3>=1.34",
    "python-multipart>=0.0.9",
    "PyNaCl>=1.5",
    "aiosmtplib>=3.0",
    "anthropic>=0.40",
]

[project.optional-dependencies]
security = [
    "bandit>=1.7",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]
