[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "academic-research-agent"
version = "2.0.0"
description = "Search academic papers on arXiv, extract content, and produce a literature review."
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
