[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-image-generator-pack"
version = "1.0.0"
description = "Generate images from text prompts using Stability AI or Replicate APIs."
requires-python = ">=3.10"
license = "MIT"
dependencies = ["httpx>=0.25", "Pillow>=10.0"]

[tool.setuptools.packages.find]
where = ["src"]
