[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api-connector-pack"
version = "1.0.0"
description = "Universal REST API client with authentication and retry logic."
requires-python = ">=3.10"
license = "MIT"
dependencies = ["httpx>=0.25"]

[tool.setuptools.packages.find]
where = ["src"]
