[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "api-design-agent"
version = "1.0.0"
description = "Generate an OpenAPI specification from requirements, validate it, and produce API documentation."
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
