[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arxiv-search-pack"
version = "1.0.0"
description = "Search and retrieve academic papers from ArXiv."
requires-python = ">=3.10"
license = "MIT"
dependencies = ["httpx>=0.25"]

[tool.setuptools.packages.find]
where = ["src"]
