[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-processor-pack"
version = "1.0.0"
description = "Process audio files with trimming, conversion, and volume adjustment"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["pydub>=0.25"]

[tool.setuptools.packages.find]
where = ["src"]
