[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-toolkit-pack"
version = "1.0.0"
description = "AWS toolkit for S3, EC2, and Lambda operations"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["boto3>=1.33"]

[tool.setuptools.packages.find]
where = ["src"]
