[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blog-writer-agent"
version = "1.0.0"
description = "Research a topic and write an SEO-optimized blog post with proper structure, keywords, and meta description."
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
