[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blog-writer-agent"
version = "2.0.0"
description = "Research a topic and write an SEO-optimized blog post with structure and keywords."
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
