[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blog-writer-agent"
version = "3.0.0"
description = "Write SEO-optimized blog posts with compelling structure, using LLM reasoning."
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
