[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "browser-automation-pack"
version = "1.0.0"
description = "Automate browser interactions: screenshots, text extraction, clicks, and form filling."
requires-python = ">=3.10"
license = "MIT"
dependencies = ["playwright>=1.40", "agentnode-sdk>=0.1.0"]

[tool.setuptools.packages.find]
where = ["src"]
