[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calendar-manager-pack"
version = "1.0.0"
description = "Create, parse, and manage iCalendar (.ics) files using stdlib."
requires-python = ">=3.10"
license = "MIT"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
