[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ci-cd-agent"
version = "1.0.0"
description = "Set up and manage CI/CD pipelines: configure builds, run tests, build containers, and deploy."
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
