[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ci-cd-agent"
version = "2.0.0"
description = "Analyze project structure and generate CI/CD pipeline configuration."
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
