[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "citation-manager-pack"
version = "1.0.0"
description = "Generate citations in APA, MLA, Chicago, and Harvard styles"
requires-python = ">=3.10"
license = "MIT"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
