[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-executor-pack"
version = "1.0.0"
description = "Execute Python code in a sandboxed subprocess with timeout and memory limits."
requires-python = ">=3.10"
license = "MIT"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
