[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "code-review-agent"
version = "2.0.0"
description = "Perform comprehensive code review: lint, security audit, and refactoring suggestions."
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
