[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "competitive-intel-agent"
version = "2.0.0"
description = "Analyze competitors by scraping web presence, monitoring news, and producing a competitive report."
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
