[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "contract-review-agent"
version = "1.0.0"
description = "Analyze legal contracts, flag risky clauses, compare against templates, and suggest amendments."
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
