[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contract-review-pack"
version = "1.0.0"
description = "Analyze legal contracts and flag risky clauses."
requires-python = ">=3.10"
license = "MIT"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
